# tcs-ros-rviz

./: CMakeLists.txt  README.md  package.xml
launch/: viz.launch
rviz/: StandardSettings.rviz
scripts/: Setup.py  TCSJointClient.py
urdf/: PF3400SX.urdf
urdf/mesh/: PF3400_Hand.STL  PF3400_Inner_Link.STL  PF3400_Left_Finger.STL  PF3400_Outer_Link.STL  PF3400_Right_Finger.STL  PF3400_Z_Carriage.STL
