<?xml version="1.0"?>
<package format="2">
  <name>pa_viz_pf3400</name>
  <version>0.0.0</version>
  <description>A package for visualizing a PF3400 in real time using RViz. Requires TCS to be running on the PF3400.</description>

  <maintainer email="alex.reed@preciseautomation.com">Alex Reed</maintainer>

  <license>MIT</license>

  <author email="alex.reed@preciseautomation.com">Alex Reed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
